--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "node server/server.js"
     },
     "dependencies": {
+        "axios": "^1.8.4",
         "better-sqlite3": "^11.9.1",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
