--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "better-sqlite3": "^11.9.1",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
         "express": "^4.18.2",
         "multer": "^1.4.5-lts.2",
         "uuid": "^11.1.0"
