changed to sqlite3 session management from default express session used in development

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "axios": "^1.8.4",
         "better-sqlite3": "^11.9.1",
+        "better-sqlite3-session-store": "^0.1.0",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
